--- a/index.html
+++ b/index.html
@@ -15,85 +15,85 @@
     <h1 id="title">Wordle</h1>
     <hr>
     <div id="gameBoard">
-        <div class="gameRow">
-            <div class="gameBlock"><span>A</span></div>
-            <div class="gameBlock gameBlock_inWord"><span>S</span></div>
-            <div class="gameBlock"><span>D</span></div>
-            <div class="gameBlock"><span>F</span></div>
-            <div class="gameBlock"><span>G</span></div>
-        </div>
-        <div class="gameRow">
-            <div class="gameBlock"></div>
-            <div class="gameBlock"></div>
-            <div class="gameBlock"></div>
-            <div class="gameBlock"></div>
-            <div class="gameBlock"></div>
-        </div>
-        <div class="gameRow">
-            <div class="gameBlock"></div>
-            <div class="gameBlock"></div>
-            <div class="gameBlock"></div>
-            <div class="gameBlock"></div>
-            <div class="gameBlock"></div>
-        </div>
-        <div class="gameRow">
-            <div class="gameBlock"></div>
-            <div class="gameBlock"></div>
-            <div class="gameBlock"></div>
-            <div class="gameBlock"></div>
-            <div class="gameBlock"></div>
-        </div>
-        <div class="gameRow">
-            <div class="gameBlock"></div>
-            <div class="gameBlock"></div>
-            <div class="gameBlock"></div>
-            <div class="gameBlock"></div>
-            <div class="gameBlock"></div>
-        </div>
-        <div class="gameRow">
-            <div class="gameBlock gameBlock_last"></div>
-            <div class="gameBlock gameBlock_last"></div>
-            <div class="gameBlock gameBlock_last"></div>
-            <div class="gameBlock gameBlock_last"></div>
-            <div class="gameBlock gameBlock_last"></div>
-        </div>
+    <div class="gameRow">
+        <div class="gameBlock gameBlock_First"></div>
+        <div class="gameBlock gameBlock_First"></div>
+        <div class="gameBlock gameBlock_First"></div>
+        <div class="gameBlock gameBlock_First"></div>
+        <div class="gameBlock gameBlock_First"></div>
     </div>
-    <div id="keyBoard">
-    <div class="keyRow">
-        <div class="key" data-key="q">q</div>
-        <div class="key" data-key="w">w</div>
-        <div class="key" data-key="e">e</div>
-        <div class="key" data-key="r">r</div>
-        <div class="key" data-key="t">t</div>
-        <div class="key" data-key="y">y</div>
-        <div class="key" data-key="u">u</div>
-        <div class="key" data-key="i">i</div>
-        <div class="key" data-key="o">o</div>
-        <div class="key" data-key="p">p</div>
+    <div class="gameRow">
+        <div class="gameBlock"></div>
+        <div class="gameBlock"></div>
+        <div class="gameBlock"></div>
+        <div class="gameBlock"></div>
+        <div class="gameBlock"></div>
     </div>
-    <div class="keyRow">
-        <div class="key" data-key="a">a</div>
-        <div class="key" data-key="s">s</div>
-        <div class="key" data-key="d">d</div>
-        <div class="key" data-key="f">f</div>
-        <div class="key" data-key="g">g</div>
-        <div class="key" data-key="h">h</div>
-        <div class="key" data-key="j">j</div>
-        <div class="key" data-key="k">k</div>
-        <div class="key" data-key="l">l</div>
+    <div class="gameRow">
+        <div class="gameBlock"></div>
+        <div class="gameBlock"></div>
+        <div class="gameBlock"></div>
+        <div class="gameBlock"></div>
+        <div class="gameBlock"></div>
     </div>
-    <div class="keyRow">
-        <div class="keyOperator" id="enter" data-key="enter">Enter</div>
-        <div class="key" data-key="z">z</div>
-        <div class="key" data-key="x">x</div>
-        <div class="key" data-key="c">c</div>
-        <div class="key" data-key="v">v</div>
-        <div class="key" data-key="b">b</div>
-        <div class="key" data-key="n">n</div>
-        <div class="key" data-key="m">m</div>
-        <div class="keyOperator" id="backspace" data-key="backspace">←</div>
+    <div class="gameRow">
+        <div class="gameBlock"></div>
+        <div class="gameBlock"></div>
+        <div class="gameBlock"></div>
+        <div class="gameBlock"></div>
+        <div class="gameBlock"></div>
     </div>
+    <div class="gameRow">
+        <div class="gameBlock"></div>
+        <div class="gameBlock"></div>
+        <div class="gameBlock"></div>
+        <div class="gameBlock"></div>
+        <div class="gameBlock"></div>
     </div>
-    <h1 id="answer"></h1>
+    <div class="gameRow">
+        <div class="gameBlock gameBlock_last"></div>
+        <div class="gameBlock gameBlock_last"></div>
+        <div class="gameBlock gameBlock_last"></div>
+        <div class="gameBlock gameBlock_last"></div>
+        <div class="gameBlock gameBlock_last"></div>
+    </div>
+</div>
+<div id="keyBoard">
+<div class="keyRow">
+    <div class="key" data-key="q">q</div>
+    <div class="key" data-key="w">w</div>
+    <div class="key" data-key="e">e</div>
+    <div class="key" data-key="r">r</div>
+    <div class="key" data-key="t">t</div>
+    <div class="key" data-key="y">y</div>
+    <div class="key" data-key="u">u</div>
+    <div class="key" data-key="i">i</div>
+    <div class="key" data-key="o">o</div>
+    <div class="key" data-key="p">p</div>
+</div>
+<div class="keyRow">
+    <div class="key" data-key="a">a</div>
+    <div class="key" data-key="s">s</div>
+    <div class="key" data-key="d">d</div>
+    <div class="key" data-key="f">f</div>
+    <div class="key" data-key="g">g</div>
+    <div class="key" data-key="h">h</div>
+    <div class="key" data-key="j">j</div>
+    <div class="key" data-key="k">k</div>
+    <div class="key" data-key="l">l</div>
+</div>
+<div class="keyRow">
+    <div class="keyOperator" id="enter" data-key="enter">Enter</div>
+    <div class="key" data-key="z">z</div>
+    <div class="key" data-key="x">x</div>
+    <div class="key" data-key="c">c</div>
+    <div class="key" data-key="v">v</div>
+    <div class="key" data-key="b">b</div>
+    <div class="key" data-key="n">n</div>
+    <div class="key" data-key="m">m</div>
+    <div class="keyOperator" id="backspace" data-key="backspace">←</div>
+</div>
+    </div>
+    <p id="message"></p>
 </body>
 </html>
