--- a/index.html
+++ b/index.html
@@ -23,39 +23,39 @@
         <div class="gameBlock gameBlock_First"></div>
     </div>
     <div class="gameRow">
-        <div class="gameBlock"></div>
-        <div class="gameBlock"></div>
-        <div class="gameBlock"></div>
-        <div class="gameBlock"></div>
-        <div class="gameBlock"></div>
+        <div class="gameBlock gameBlock_Second"></div>
+        <div class="gameBlock gameBlock_Second"></div>
+        <div class="gameBlock gameBlock_Second"></div>
+        <div class="gameBlock gameBlock_Second"></div>
+        <div class="gameBlock gameBlock_Second"></div>
     </div>
     <div class="gameRow">
-        <div class="gameBlock"></div>
-        <div class="gameBlock"></div>
-        <div class="gameBlock"></div>
-        <div class="gameBlock"></div>
-        <div class="gameBlock"></div>
+        <div class="gameBlock gameBlock_Third"></div>
+        <div class="gameBlock gameBlock_Third"></div>
+        <div class="gameBlock gameBlock_Third"></div>
+        <div class="gameBlock gameBlock_Third"></div>
+        <div class="gameBlock gameBlock_Third"></div>
     </div>
     <div class="gameRow">
-        <div class="gameBlock"></div>
-        <div class="gameBlock"></div>
-        <div class="gameBlock"></div>
-        <div class="gameBlock"></div>
-        <div class="gameBlock"></div>
+        <div class="gameBlock gameBlock_Fourth"></div>
+        <div class="gameBlock gameBlock_Fourth"></div>
+        <div class="gameBlock gameBlock_Fourth"></div>
+        <div class="gameBlock gameBlock_Fourth"></div>
+        <div class="gameBlock gameBlock_Fourth"></div>
     </div>
     <div class="gameRow">
-        <div class="gameBlock"></div>
-        <div class="gameBlock"></div>
-        <div class="gameBlock"></div>
-        <div class="gameBlock"></div>
-        <div class="gameBlock"></div>
+        <div class="gameBlock gameBlock_Fifth"></div>
+        <div class="gameBlock gameBlock_Fifth"></div>
+        <div class="gameBlock gameBlock_Fifth"></div>
+        <div class="gameBlock gameBlock_Fifth"></div>
+        <div class="gameBlock gameBlock_Fifth"></div>
     </div>
     <div class="gameRow">
-        <div class="gameBlock gameBlock_last"></div>
-        <div class="gameBlock gameBlock_last"></div>
-        <div class="gameBlock gameBlock_last"></div>
-        <div class="gameBlock gameBlock_last"></div>
-        <div class="gameBlock gameBlock_last"></div>
+        <div class="gameBlock gameBlock_Last"></div>
+        <div class="gameBlock gameBlock_Last"></div>
+        <div class="gameBlock gameBlock_Last"></div>
+        <div class="gameBlock gameBlock_Last"></div>
+        <div class="gameBlock gameBlock_Last"></div>
     </div>
 </div>
 <div id="keyBoard">
